--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@sveltejs/enhanced-img": "^0.3.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"dropcss": "^1.0.16",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
 		"svelte-intersection-observer": "^1.0.0",
@@ -24,6 +25,7 @@
 	"type": "module",
 	"dependencies": {
 		"@sveltejs/adapter-cloudflare": "^4.7.0",
+		"@sveltejs/amp": "^1.1.3",
 		"embla-carousel-autoplay": "^8.1.6",
 		"embla-carousel-svelte": "^8.1.6",
 		"svelte-awesome": "^3.3.1",
